NXP-29984: migrate IOManagerComponent to use xmap registries